--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -1,9 +1,21 @@
 @font-face {
-  font-family: "Oswald";
+  font-family: "Baron Neue";
   font-weight: 400;
   font-style: normal;
   font-display: swap;
   src:
-    url("../fonts/oswaldregular.woff2") format("woff2"),
-    url("../fonts/oswaldregular.woff") format("woff");
+    url("../fonts/baronneue.woff2") format("woff2"),
+    url("../fonts/baronneue.woff") format("woff"),
+    url("../fonts/baronneue.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "Inter-Bold";
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/inter-bold.woff2") format("woff2"),
+    url("../fonts/inter-bold.woff") format("woff"),
+    url("../fonts/inter-bold.ttf") format("truetype");
 }
