--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,7 +1,11 @@
 
 //Global
 @import "global/fonts.less";
+@import "global/keyframes.less";
 
 //blocks
 @import "blocks/body.less";
-
+@import "blocks/page-main.less";
+@import "blocks/offer.less";
+@import "blocks/work.less";
+@import "blocks/footer.less";
