--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -1,13 +1,6 @@
 .body {
-  background-image: url("../img/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: 115%;
-  background-position: top right;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 36px;
-  line-height: 36px;
-  color: red;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
