--- a/source/less/global/keyframes.less
+++ b/source/less/global/keyframes.less
@@ -23,43 +23,43 @@
 @keyframes bigwords {
   from {
     opacity: 1;
-    top: 42.2vh;
+    top: 74vw;
   }
 
   33% {
     opacity: 1;
-    top: 42.2vh;
+    top: 74vw;
   }
 
   66% {
     opacity: 1;
-    top: 16.5vh;
+    top: 28vw;
   }
 
   to {
     opacity: 0;
-    top: 16.5vh;
+    top: 28vw;
   }
 }
 
 @keyframes littlewords {
   from {
     opacity: 1;
-    top: 30vh;
+    top: 95vw;
   }
 
   33% {
     opacity: 1;
-    top: 30vh;
+    top: 95vw;
   }
 
   66% {
     opacity: 1;
-    top: 10vh;
+    top: 4vw;
   }
 
   to {
     opacity: 0;
-    top: 10vh;
+    top: 4vw;
   }
 }
