--- a/source/less/global/keyframes.less
+++ b/source/less/global/keyframes.less
@@ -1,22 +1,44 @@
-@keyframes threelist {
+@keyframes logomobile {
   from {
-    opacity: 0 0;
+    opacity: 0;
     background-position-y: 140px;
   }
 
   25% {
-    opacity: 0 0;
+    opacity: 0;
     background-position-y: 140px;
   }
 
   50% {
-    opacity: 1 0;
+    opacity: 1;
     background-position-y: 140px;
   }
 
   to {
-    opacity: 1 0;
+    opacity: 1;
     background-position-y: -40px;
+  }
+}
+
+@keyframes logodesktop {
+  from {
+    opacity: 0;
+    background-position: 75% 70%;
+  }
+
+  25% {
+    opacity: 0;
+    background-position: 75% 70%;
+  }
+
+  50% {
+    opacity: 1;
+    background-position: 75% 70%;
+  }
+
+  to {
+    opacity: 1;
+    background-position: 50% 70%;
   }
 }
 
@@ -42,6 +64,33 @@
   }
 }
 
+@keyframes bigwords-desktop {
+  from {
+    opacity: 1;
+    left: 55%;
+  }
+
+  25% {
+    opacity: 1;
+    left: 55%;
+  }
+
+  50% {
+    opacity: 1;
+    left: 55%;
+  }
+
+  75% {
+    opacity: 1;
+    left: 42%;
+  }
+
+  to {
+    opacity: 0;
+    left: 42%;
+  }
+}
+
 @keyframes littlewords {
   from {
     opacity: 1;
@@ -61,5 +110,53 @@
   to {
     opacity: 0;
     top: 4vw;
+  }
+}
+
+@keyframes littlewords-desktop {
+  from {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+@keyframes background-anim {
+  from {
+    background: rgba(0, 0, 0, 1);
+  }
+
+  50% {
+    background: rgba(0, 0, 0, 1);
+  }
+
+  65% {
+    background: rgba(0, 0, 0, 0.7);
+  }
+
+  75% {
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+  85% {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+  to {
+    background: rgba(0, 0, 0, 0);
   }
 }
