--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -10,6 +10,10 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 18px;
+
+  @media (min-width: 768px) {
+    margin-top: 5%;
+  }
 }
 
 .footer__tel {
