--- a/source/less/blocks/work.less
+++ b/source/less/blocks/work.less
@@ -2,6 +2,13 @@
   display: flex;
   flex-direction: column;
   background-color: white;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0;
+  }
 }
 
 .work__example {
@@ -11,6 +18,40 @@
   background-color: #f6f6f6;
   text-decoration: none;
   color: black;
+
+  @media (min-width: 768px) {
+    margin: 1%;
+    width: 26vw;
+    height: 23vw;
+    margin-top: 5%;
+  }
+}
+
+.work__example--0 {
+  display: none;
+
+  @media (min-width: 768px) {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: "Inter-Bold", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: 1000;
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  @media (min-width: 1440px) {
+    font-size: 50px;
+    line-height: 50px;
+  }
+
+  @media (min-width: 1960px) {
+    font-size: 54px;
+    line-height: 50px;
+  }
 }
 
 .work__example--1 {
@@ -18,6 +59,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 60%;
+
+  @media (min-width: 768px) {
+    background-size: 55%;
+  }
 }
 
 .work__example--2 {
@@ -25,6 +70,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
+
+  @media (min-width: 768px) {
+    background-size: 45%;
+  }
 }
 
 .work__example--3 {
@@ -32,6 +81,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
+
+  @media (min-width: 768px) {
+    background-size: 47%;
+  }
 }
 
 .work__example--4 {
@@ -39,6 +92,11 @@
   background-repeat: no-repeat;
   background-position: 14vw 22vw;
   background-size: 70%;
+
+  @media (min-width: 768px) {
+    background-size: 80%;
+    background-position: 50% 85%;
+  }
 }
 
 .work__example--5 {
@@ -46,6 +104,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 53%;
+
+  @media (min-width: 768px) {
+    background-size: 60%;
+  }
 }
 
 .work__example--6 {
@@ -53,6 +115,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 55%;
+
+  @media (min-width: 768px) {
+    background-size: 60%;
+  }
 }
 
 .work__example--7 {
@@ -81,6 +147,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 30%;
+
+  @media (min-width: 768px) {
+    background-size: 34%;
+  }
 }
 
 .work__example--11 {
@@ -88,6 +158,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
+
+  @media (min-width: 768px) {
+    background-size: 55%;
+  }
 }
 
 .work__example--12 {
@@ -95,6 +169,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
+
+  @media (min-width: 768px) {
+    background-size: 55%;
+  }
 }
 
 .work__example--13 {
@@ -102,6 +180,10 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: 50%;
+
+  @media (min-width: 768px) {
+    background-size: 55%;
+  }
 }
 
 .work__example--map {
@@ -109,6 +191,12 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  @media (min-width: 768px) {
+    background-image: url("../img/your-logo.png");
+    background-size: 60%;
+    background-position: 50% 40%;
+  }
 }
 
 .work__description {
@@ -126,6 +214,11 @@
   flex-direction: column;
   justify-content: center;
   transition: 0.5s;
+
+  @media (min-width: 768px) {
+    font-size: 14px;
+    line-height: 18px;
+  }
 }
 
 .work__description:hover {
@@ -136,17 +229,37 @@
 
 .work__description-client {
   padding: 0 5vw;
+
+  @media (min-width: 768px) {
+    padding: 0 2vw;
+  }
 }
 
 .work__description-site {
   padding: 10vw 5vw 0 5vw;
   font-size: 14px;
   font-style: italic;
+
+  @media (min-width: 768px) {
+    padding: 5vw 5vw 0 2vw;
+  }
 }
 
 .work__description--contact {
   font-size: 12px;
   line-height: 15px;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.work__description--yourlogo {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .work__description-title {
