--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -34,7 +34,8 @@
   @media (min-width: 414px) {
     height: 75vw;
     width: auto;
-    background-size: 85%;
+    background-size: 115%;
+    //background-size: 85%;
   }
 
   @media (min-width: 768px) {
@@ -102,7 +103,7 @@
 
 @media (max-width: 767px) {
   .offer__hide-little-words--mobile {
-    animation: littlewords 3.5s 1 ease-in-out;
+    animation: littlewords 4s 1 ease-in-out;
   }
 }
 
@@ -124,7 +125,7 @@
 
   @media (min-width: 768px) {
     //top: 55%;
-    font-size: 14px;
+    font-size: 18px; //нужно смотреть в браузере
     padding: 0 35%;
   }
 }
@@ -169,7 +170,7 @@
   padding-bottom: 5vh;
 
   @media (min-width: 768px) {
-    background-image: url("../img/pointer-down-desktop.svg");
+    background-image: url("../img/pointer-down-desktop.png");
     padding-bottom: 0;
     height: 100px;
     background-size: 2.5%;
