--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -5,14 +5,51 @@
   align-items: center;
   background-color: black;
   margin-top: 10vw;
-  font-family: "Inter-Bold", "Arial", sans-serif;
+  font-family: "Inter-Regular", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 18px;
+  padding: 0;
 
   @media (min-width: 768px) {
     margin-top: 5%;
+    /*flex-direction: row;
+    padding: 0 3.5%;
+    justify-content: space-between;*/
+    font-size: 14px;
+    line-height: 14px;
+    display: grid;
+    grid-template-columns: 35% 30% 30%;
+    column-gap: 2.5%;
+    padding: 0 3.5%;
+  }
+}
+
+.footer__text {
+  display: none;
+
+  @media (min-width: 768px) {
+    color: white;
+    display: block;
+    font-family: "Inter-Bold", "Arial", sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 26px;
+  }
+}
+
+.footer__contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+
+  @media (min-width: 768px) {
+    line-height: 20px;
+    align-items: flex-start;
   }
 }
 
@@ -20,6 +57,10 @@
   color: white;
   text-decoration: none;
   margin: 5vw 0;
+
+  @media (min-width: 768px) {
+    margin: 0;
+  }
 }
 
 .footer__mail {
@@ -27,6 +68,11 @@
   text-decoration: none;
   margin: 0;
   padding: 0;
+
+  @media (min-width: 768px) {
+    line-height: 28px;
+    padding-bottom: 5px;
+  }
 }
 
 .footer__tel:hover {
@@ -48,9 +94,40 @@
   margin: 5vw 0 7vw 0;
   font-size: 20px;
   line-height: 20px;
+
+  @media (min-width: 768px) {
+    margin: 0;
+    width: 150px;
+    height: 30px;
+    font-size: 16px;
+    line-height: 18px;
+    border-radius: 8px;
+  }
 }
 
 .footer__button:hover {
   opacity: 0.8;
   background-color: rgba(196, 196, 196, 0.4);
+}
+
+.footer__requisites {
+  display: none;
+
+  @media (min-width: 768px) {
+    display: block;
+    color: white;
+  }
+}
+
+.footer__requisites-title {
+  font-family: "Inter-Bold", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.footer__requisites-uppercase {
+  text-transform: uppercase;
 }
