--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -19,3 +19,14 @@
     url("../fonts/inter-bold.woff") format("woff"),
     url("../fonts/inter-bold.ttf") format("truetype");
 }
+
+@font-face {
+  font-family: "Inter-Regular";
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  src:
+    url("../fonts/Inter-Regular.woff2") format("woff2"),
+    url("../fonts/Inter-Regular.woff") format("woff"),
+    url("../fonts/Inter-Regular.ttf") format("truetype");
+}
