--- a/source/less/global/fonts.less
+++ b/source/less/global/fonts.less
@@ -26,7 +26,7 @@
   font-style: normal;
   font-display: swap;
   src:
-    url("../fonts/Inter-Regular.woff2") format("woff2"),
-    url("../fonts/Inter-Regular.woff") format("woff"),
-    url("../fonts/Inter-Regular.ttf") format("truetype");
+    url("../fonts/inter-regular.woff2") format("woff2"),
+    url("../fonts/inter-regular.woff") format("woff"),
+    url("../fonts/inter-regular.ttf") format("truetype");
 }
